--- a/.github/workflows/image_build_all.yaml
+++ b/.github/workflows/image_build_all.yaml
@@ -125,7 +125,7 @@ jobs:
           VERSION: "beta2"
         run: |
           sudo mv -v $GITHUB_WORKSPACE/arm-profiles /usr/share/manjaro-arm-tools/profiles
-          sudo buildarmimg -d $DEVICE -e $EDITION
+          sudo buildarmimg -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH -k mobile
           
           ls -lasih /var/cache/manjaro-arm-tools/img
           
