remove lomiri edition
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/.github/workflows/image_build_all.yaml
+++ b/.github/workflows/image_build_all.yaml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       matrix:
         DEVICE: [pinetab]
-        EDITION: [lomiri,phosh,plasma-mobile]
+        EDITION: [phosh,plasma-mobile]
         BRANCH: [testing]
     steps:
       - 
